tests/ui/type-alias-impl-trait/type-alias-impl-trait-with-cycle-error-1.stderr
error: unconstrained opaque type
  --> $DIR/type-alias-impl-trait-with-cycle-error-1.rs:4:12
   |
LL | type Foo = impl Fn() -> Foo;
   |            ^^^^^^^^^^^^^^^^
   |
   = note: `Foo` must be used in combination with a concrete type within the same crate

error: aborting due to 1 previous error

