tests/ui/type-alias-impl-trait/type-alias-impl-trait-with-cycle-error-1.rs
#![feature(type_alias_impl_trait)]
//@ known-bug: #109268

type Foo = impl Fn() -> Foo;

fn crash(x: Foo) -> Foo {
    x
}

fn main() {}
